Update Strings “english”

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "title": "FreelanceHub by Anmol Ratan Sachdeva | Resources, Tools & More",
+  "title": "FreelanceHub by Anmol Ratan Sachdeva",
   "description": "There's nothing better than having your own freelancing library at your disposal. FreelanceHub is your very own freelancing library where you'll find blogs, tips, tools, resources and more to become a better freelancer.  ",
   "tools": {
     "title": "Discover a tool or tip to get better at freelancing",
